# SPDX-FileCopyrightText: Copyright (c) 2025-2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

[project]
name = "isaacteleop-haptic-feedback-examples"
version = "0.0.0"  # Internal examples - not versioned
description = "Isaac Teleop haptic feedback CLI examples (OpenXR controller)."
requires-python = ">=3.10,<3.14"
dependencies = [
    "isaacteleop",
    "numpy>=1.23.0",
]
