# SPDX-FileCopyrightText: Copyright (c) 2025 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

[project]
name = "retargeting-examples"
version = "0.0.0"  # Internal examples - not versioned
description = "Retargeting Engine Python Examples"
requires-python = ">=3.10,<3.13"
dependencies = [
    "isaacteleop[ui]",
    "numpy>=1.22.0",
]
