# SPDX-FileCopyrightText: Copyright (c) 2025 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

[project]
name = "teleop-examples"
version = "0.1.0"
description = "TeleopCore Retargeting Examples"
requires-python = ">=3.11,<3.12"
dependencies = [
    "teleopcore[isaac_lab]",
]

[tool.uv]
# When running with uv, it will find the wheel from the install directory
find-links = ["../../../wheels"]
# Only use managed Python installations (not system Python)
python-preference = "only-managed"

