# SPDX-FileCopyrightText: Copyright (c) 2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

[project]
name = "teleop-ros2-example"
version = "0.1.0"
description = "Isaac Teleop ROS2 Example"
requires-python = ">=3.10,<3.14"
dependencies = [
    "isaacteleop[grounding,retargeters]",
    "msgpack",
    "msgpack-numpy",
    # robotic_grounding imports viser; pin the pre-yourdfpy version so Linux arm64 does not pull
    # trimesh[easy] -> embreex, which has no aarch64 wheel.
    "viser==0.1.0",
]
