# SPDX-FileCopyrightText: Copyright (c) 2025 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

[project]
name = "teleop-utils-examples"
version = "0.0.0"  # Internal examples - not versioned
description = "TeleopUtils Python Examples"
requires-python = ">=3.10,<3.12"
dependencies = [
    "teleopcore[ui]",
    "numpy>=1.19.0",
]

[tool.uv]
# When running with uv, it will find the wheel from the install directory
find-links = ["../../../wheels"]
# Only use managed Python installations (not system Python)
python-preference = "only-managed"

