# SPDX-FileCopyrightText: Copyright (c) 2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

[project]
name = "vehicle-teleop-example"
version = "0.0.0"
description = "Isaac Teleop vehicle steering and Kia Panda control example"
requires-python = ">=3.10,<3.14"
dependencies = [
    "isaacteleop[cloudxr]",
    "mcap>=1.2.0",
    "pyyaml",
    "pyzmq",
]

[[tool.uv.index]]
url = "https://pypi.nvidia.com"
