# SPDX-FileCopyrightText: Copyright (c) 2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

[project]
name = "vehicle-teleop-example"
version = "0.0.0"
description = "Isaac Teleop vehicle steering and Kia Panda control example"
requires-python = ">=3.10,<3.14"
dependencies = [
    "crcmod",
    "isaacteleop[cloudxr]",
    "libusb-package",
    "libusb1",
    "mcap>=1.2.0",
    "pycapnp==2.1.0",
    "pycryptodome",
    "pyyaml",
    "pyzmq",
    "scons",
    "tqdm",
    "websockets>=14",
]

[[tool.uv.index]]
url = "https://pypi.nvidia.com"
